--- a/main.scss
+++ b/main.scss
@@ -136,7 +136,7 @@ body {
     // Search
     &__search {
       position: relative;
-      margin-right: -3.3rem;
+      margin-right: -4.2rem;
 
       img {
         position: absolute;
@@ -146,7 +146,7 @@ body {
       }
 
       input {
-        width: 41vw;
+        width: 42.5vw;
         padding: .6rem {
           left: 2.2rem;
         };
@@ -374,7 +374,7 @@ body {
       &::before {
         content: '';
         position: absolute;
-        top: 49%; left: 0%;
+        top: 51%; left: 0%;
         height: 2px; width: 87%;
         background: $main-white;
       }
@@ -397,15 +397,18 @@ body {
 
           div {
             position: absolute;
-            top: 10%;
-            
-            &:not(:nth-child(1)) {
-              top: 100%;
-            }
 
             span {
               display: inline-block;
+              transform: translateY(10%);
             }
+            
+            &:not(:nth-child(1)) {
+              span {
+                transform: translateY(100%);
+              }
+            }
+
           } 
         }
         
