--- a/main.scss
+++ b/main.scss
@@ -214,7 +214,19 @@ body {
     color: $main-white;
     font-family: $font-josefin;
     z-index: 2;
-    display: none;
+    opacity: 0;
+    top: -100%;
+    pointer-events: none;
+    transition: opacity .42s cubic-bezier(1,0,1,-0.14) .2s,
+                pointer-events .1s linear .3s,
+                top .6s cubic-bezier(1,0,1,.01);
+
+    // Animation
+    &.open {
+      opacity: 1;
+      pointer-events: all;
+      top: 0%;
+    }
 
     // max width
     &__inner {
@@ -259,6 +271,7 @@ body {
               font-size: 3.3vw;
               transform: translateY(.6vw);
               transition: all .5s ease-in;
+              transform: translateY(110%);
             }
           }
 
@@ -273,6 +286,8 @@ body {
             line-height: 1.2vw;
             border-radius: 100vh;
             transform: translate(-.6vw);
+            opacity: 0;
+            transition: opacity .8s ease-in .6s;
           }  
         }
         
